src/objects/Outcome__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Parent Contract for this Outcome.</description>
        <inlineHelpText>Parent Contract for this Outcome.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Outcomes</relationshipLabel>
        <relationshipName>Outcomes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Milestones_Met__c</fullName>
        <description>Number of unique milestones that were met for this outcome.</description>
        <inlineHelpText>Number of unique milestones that were met for this outcome.</inlineHelpText>
        <label>Number of Milestones Met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outcome_Date_Met__c</fullName>
        <description>Date this outcome was met.</description>
        <inlineHelpText>Date this outcome was met.</inlineHelpText>
        <label>Outcome Date Met</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outcome_DetailFormula__c</fullName>
        <formula>Template_Outcome__r.Template_Outcome_Detail__c</formula>
        <label>Outcome Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_NameFormula__c</fullName>
        <formula>Template_Outcome__r.Template_Outcome_Name__c</formula>
        <label>Outcome Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Case_Record__c</fullName>
        <description>Parent case record for the Outcome.</description>
        <inlineHelpText>Parent case record for the Outcome.</inlineHelpText>
        <label>Parent Case Record</label>
        <referenceTo>Case_Record__c</referenceTo>
        <relationshipLabel>Outcomes</relationshipLabel>
        <relationshipName>Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Performance_Commitment__c</fullName>
        <formula>Template_Outcome__r.Performance_commitment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Template_Outcome__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Template Outcome</description>
        <inlineHelpText>Parent Template Outcome</inlineHelpText>
        <label>Template Outcome</label>
        <referenceTo>Template_Outcome__c</referenceTo>
        <relationshipLabel>Outcomes</relationshipLabel>
        <relationshipName>Outcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Milestones__c</fullName>
        <description>This is the total number of unique milestones (template milestones) for this outcome.</description>
        <inlineHelpText>This is the total number of unique milestones (template milestones) for this outcome.</inlineHelpText>
        <label>Total Number of Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Outcome</label>
    <nameField>
        <displayFormat>OUT-{00000}</displayFormat>
        <label>Outcome Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>